Use the correct level of indirection to change colours to dark mode versions

--- a/src/sass/_scheme.scss
+++ b/src/sass/_scheme.scss
@@ -38,7 +38,7 @@
 
   @media (prefers-color-scheme: dark) {
     @at-root & {
-     #{$property}: var($dark-mode-colour);
+     #{$colour-variable-to-use}: var($dark-mode-colour);
     }
   }
 }
